--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "swiper": "^11.0.7",
     "vite": "^5.1.4",
     "vue": "^3.4.19"
   },
